feat: change all endpoints to new pagination api
